Adding CLASSPATH support